# AdminDeck

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-05-03T13-11-39-498Z.yml
docs/: AIINSTRUCTIONS.md  AI_PROVIDERS.md  ANTIVIRUS.md  ARCHITECTURE.md  DASHBOARD.md  LOCALIZATION.md  PERFORMANCE.md  PRD.md  RELEASE.md  ROADMAP.md  TERMINAL_COMPATIBILITY_CHECKLIST.md
docs/ADR/: 0001-product-scope.md  0002-technology-stack.md  0003-security-privacy.md  0004-ssh-transport-library.md  0005-extension-platform-architecture.md  0006-dashboard-script-widget-hardening.md
docs/localization_todo/: README.md  _TEMPLATE.md  ai.clearIntent.md  ai.copilotSdkOAuthRequired.md  ai.createWidget.md  ai.createWidgetExamples.md  ai.createWidgetPlaceholder.md  ai.dashboardToolsDisabledHint.md  ai.dashboardToolsDisabledTitle.md  ai.selectedIntent.md  ai.toolApprovalAllow.md  ai.toolApprovalAllowSession.md  ai.toolApprovalAllowedSession.md  ai.toolApprovalApproved.md  ai.toolApprovalBody.md  ai.toolApprovalCancelled.md  ai.toolApprovalDetails.md  ai.toolApprovalRejected.md  ai.toolApprovalTitle.md  ai.toolApprovalTool.md  ai.toolApprovalWaiting.md  ai.toolDashboard.md  ai.toolDashboardDone.md  ai.toolPerformanceCounters.md  ai.toolPerformanceCountersDone.md  ai.toolPermissionAllowAll.md  ai.toolPermissionPrompt.md  ai.toolSessions.md  ai.toolSessionsDone.md  ai.watchdog.md  ai.watchdogExamples.md  ai.watchdogPlaceholder.md  app.manual.md  appLauncher.detailsNameColumn.md  appLauncher.detailsPathColumn.md  appLauncher.detailsView.md  appLauncher.iconView.md  appLauncher.listView.md  appLauncher.viewModeLabel.md  connections.chooseImage.md  (+103 more)
docs/manual/: 01-getting-started.md  02-app-layout.md  03-connections.md  04-workspace-tabs-panes.md  05-terminal.md  06-ssh-and-tmux.md  07-sftp.md  08-url-webview.md  09-remote-desktop.md  10-dashboard.md  11-app-launcher.md  12-wiki.md  13-ai-assistant.md  14-screenshots.md  15-settings.md  16-localization.md  17-data-backup-secrets.md  INDEX.md
docs/superpowers/specs/: 2026-05-19-intent-example-pools-design.md
scripts/: check-locale-keys.mjs  localize-todos.mjs  measure-ssh-readiness.ps1  package-installer.ps1  package-portable.ps1  release-github.ps1  smoke-installer.ps1  test-terminal-command-send.mjs
src/: App.css  App.tsx  app-defaults.ts  sample-data.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  app_tray.rs  dashboard_commands.rs  dashboard_storage.rs  dashboard_validation.rs  diagnostics.rs  ftp.rs  import.rs  lib.rs  logging.rs  main.rs  manual.rs  performance.rs  power.rs  rdp.rs  screenshot.rs  secrets.rs  serial.rs  sessions.rs  sftp.rs  ssh.rs  ssh_config.rs  ssh_keys.rs  storage.rs  telnet.rs  webview.rs  wiki.rs  window_state.rs  windows_local_pty.rs
src-tauri/src/ai/: providers.rs
src-tauri/src/ai/providers/: azure_openai.rs  deepseek.rs  gemini.rs  grok.rs  litellm.rs  nvidia.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs
src-tauri/src/net/: commands.rs  dns.rs  interfaces.rs  mod.rs  ping.rs  scan.rs  stream.rs  whois.rs  wol.rs
src/ai/: AssistantPanel.tsx  assistantScroll.test.ts  assistantScroll.ts  providerModelOptions.test.ts  providerModelOptions.ts  providers.test.ts  providers.ts  streamMessage.ts  terminalCommandSend.ts
src/ai/providerRegistry/: anthropic.ts  azureOpenAi.ts  deepseek.ts  gemini.ts  githubCopilot.ts  grok.ts  index.ts  nvidia.ts  openai.ts  openrouter.ts  shared.ts  types.ts
src/app/: ActivityRail.tsx
src/app-launcher/: AppLauncherWidget.tsx  storage.ts
src/assets/file-icons/: LICENSE.material-icon-theme.txt
src/connections/: ConnectionGlyph.tsx  ConnectionIcon.tsx  ConnectionIconBackgroundPicker.tsx  ConnectionIconPicker.tsx  ConnectionMenus.tsx  ConnectionSidebar.tsx  ImportDialog.tsx  connectionSidebarState.ts  ftpPortDefaults.test.ts  iconImage.test.ts  iconImage.ts  treeUtils.ts  utils.tsx
src/dashboard/: DashboardPage.tsx  dashboard.css  motion.tsx  schema.ts  types.ts  widgets.ts  widgets.typecheck.ts
src/dashboard/content/: ContentWidgetRenderer.tsx
src/dashboard/edit/: BackgroundPopover.tsx  CatalogOverlay.tsx  CustomizePopover.tsx
src/dashboard/registry/: backgroundPresets.test.ts  backgroundPresets.ts  builtInRegistry.ts  dynamicBackgrounds.test.ts  dynamicBackgrounds.tsx  palette.ts  palette.typecheck.ts  presetRegistry.test.ts  presetRegistry.tsx
src/dashboard/script/: ScriptWidgetHost.tsx  permissions.ts  widgetLibraries.ts
src/dashboard/state/: dashboardStore.ts  persistence.ts
src/dashboard/view/: DashboardCanvas.tsx  (+3 more)
src/i18n/: config.ts
src/lib/: aria.ts  customFonts.ts  nativeContextMenu.ts  nativeContextMenuModel.ts  nativeMenuIcons.ts  settings.ts  tauri.ts
src/manual/: ManualPage.tsx
src/remote-desktop/: RemoteDesktopWorkspace.tsx
src/settings/: AboutSettings.tsx  AiSettings.tsx  AppearanceSettings.tsx  CredentialsSettings.tsx  DashboardSettings.tsx  GeneralSettings.tsx  RdpSettings.tsx  ScreenshotSettings.tsx  SettingsPage.tsx  SshSettings.tsx  TerminalSettings.tsx  UrlSettings.tsx  VncSettings.tsx  aboutData.ts  aiProviderKeyField.test.ts  aiProviderKeyField.ts  credentialGroups.test.ts
src/sftp/: SftpWorkspace.tsx
src/terminal/: TerminalWorkspace.tsx  renderer.ts
src/webview/: WebViewWorkspace.tsx
src/wiki/: WikiEditor.tsx  WikiPagesButton.tsx  WikiWorkspace.tsx  wikiCommands.ts  wikiMarkdown.ts
src/workspace/: ScreenshotMenu.tsx  ScreenshotsPage.tsx  StatusBar.tsx  WorkspaceCanvas.tsx  layout.ts  nativeOverlay.ts  paneRegistry.ts  screenshotLibrary.ts
tests/: assistant-composer-intents.test.mjs  assistant-stream-message.test.mjs  assistant-working-status.test.mjs  dashboard-delete-confirmation.test.mjs  dashboard-script-srcdoc.test.mjs  native-context-menu-icons.test.mjs  native-context-menu-model.test.mjs  native-overlay-menu-policy.test.mjs
(+17 files in other folders)
