[package]
name = "kkterm"
version = "0.1.2"
description = "Fast local-first administration workspace for terminals, SSH, SFTP, and approval-based command assistance."
authors = ["Ryan Tsai"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kkterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
anyhow = "1.0.102"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rand = "0.8"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
portable-pty = "0.9.0"
keyring-core = "1.0.0"
russh = { version = "0.60.2", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2.1.2"
suppaftp = { version = "7", default-features = false, features = ["tokio", "tokio-async-native-tls", "deprecated"] }
async-native-tls = { version = "0.5", default-features = false }
serial2 = "0.2.36"
tokio = { version = "1.48.0", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }
url = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
vnc = { package = "vnc-rs", version = "0.5.3" }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
zip = "2"
futures = "0.3"
tauri-plugin-process = "2.3.1"
filedescriptor = "0.8.3"
lazy_static = "1.5.0"
shared_library = "0.1.9"
winapi = "0.3.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_DataExchange", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Variant", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Console", "Win32_System_DataExchange", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Power", "Win32_System_ProcessStatus", "Win32_System_Shutdown", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows-native-keyring-store = "1.0.0"
webview2-com = "0.38.2"
tauri-plugin-single-instance = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"







